[package]
name = "wasm-kv"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32fast = "1.5.0"
log = "0.4.29"
env_logger = "0.11"
thiserror = "2.0.17"
rand = "0.8"
bloom = "0.2.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }
crossbeam-skiplist = "0.1"
dhat = "0.3.3"
memmap2 = "0.9.9"

[profile.release]
debug = 1

[features]
dhat-heap = [] # Feature to toggle profiling
